@@ -1,4 +1,5 @@
 Changes towards version 0.3:
+- Fixed overflow problem with 32bpp bilinear,biadapt,biadv scalers -Mika
 - MixSDL now handles resampling correctly (less cracklings);
   added cubic interpolation for high quality mode -Mika
 - Removed the redundant "GameExiting" variable -Michael
